测试提交是否成功

--- a/.settings/com.zend.php.remoteproject.core.prefs
+++ b/.settings/com.zend.php.remoteproject.core.prefs
@@ -3,7 +3,7 @@ Save\ Mode=ON_SAVE
 SelectedHostGUID=c18db5d7-c359-44bf-b0f0-51e5628ae3f3
 UploadFolder=/
 eclipse.preferences.version=1
-exclusionPatterns=
+exclusionPatterns=.git/*|.project/*|.settings/*
 inclusionPatterns=
 isLocalProjectEnabled=false
 isRemoteProjectEnabled=true
